# assembly_text_task

./: CMakeLists.txt  main.cpp
assembly_funcs/: change_all_latin_to_star.s  extra_help.s  is_starts_and_ends_with_capital.s  remove_all_first_repeats.s
main/: funcs.c  main.cpp
tests/: CMakeLists.txt  change_all_latin_to_star_test.cpp  is_starts_and_ends_with_capital_test.cpp  remove_all_first_repeats_test.cpp  test.cpp
tests/C_funcs/: change_all_latin_to_star_test.cpp  is_starts_and_ends_with_capital_test.cpp  remove_all_first_repeats_test.cpp
tests/assembly_funcs/: change_all_latin_to_star_test.cpp  extra_help.cpp  extra_help_test.cpp  is_starts_and_ends_with_capital_test.cpp  remove_all_first_repeats_test.cpp
